postcss/testData/inspections/customSelectors/withoutSemicolon.pcss
<error descr="Custom selector at-rule should end with ';'">@custom-selector :--any-link :link</error>